Temporarily move from Glados to Agnus Dei

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,7 @@ pages:
     UPDATE_HTTP: "none"
     CC: "clang"
   tags:
-    - glados
+    - lightweight
   script:
   - apt-get -qq update
   - apt-get install -qq -y make clang zip zlib1g-dev zlibc python ssh rsync python3
