Fix skull to drop skull (d'oh)

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -1752,8 +1752,9 @@ mob_db: (
 	MutationCount: 2
 	MutationStrength: 30
 	Drops: {
-		DarkCrystal: 1000
 		PileOfAsh: 5000
+		DarkCrystal: 1000
+		Skull: 500
 	}
 },
 {
@@ -1799,6 +1800,7 @@ mob_db: (
 	MutationStrength: 20
 	Drops: {
 		DarkCrystal: 1000
+		Skull: 500
 	}
 },
 {
