Submodule update, Christmas 2022, Start syntax fixes

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -6813,6 +6813,7 @@ mob_db: (
 	AttackMotion: 672
 	DamageMotion: 480
 	Drops: {
+		Naftalin: 4000
 		MaggotSlime: 800
 		CactusDrink: 150
 		BugLeg: 400
