--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,7 +82,7 @@ pages:
   - mkdir -p ~/.ssh
   - echo "${SSH_PRIVATE_KEY}" | base64 -d | tr -d '\r' > ~/.ssh/id_rsa
   - chmod -R 700 ~/.ssh
-  - rsync -e 'ssh ${SSH_OPTIONS}' -aHv --delete public/updates $MYHOST:$FILE_LOCATION
+  - rsync -e 'ssh -p 65001 -o StrictHostKeyChecking=no' -aHv --delete public/updates $MYHOST:$FILE_LOCATION
   artifacts:
     paths:
     - public
