As discussed, remove the allstats -2 penalty from Overlords

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -10252,7 +10252,7 @@ item_db: (
 		//bonus bSpeedCap, DEFAULT_WALK_SPEED; // @TMWA
 		bonus bMatkRate, -60; // @EVOL2
 		bonus bMdef, -60;
-		//bonus bAllStats, -2; // @TMWA
+		//bonus bAllStats, -2; // @//TMWA (TODO: Disabled temporarily)
 		bonus bFlee, -20;
 	">
 },
