--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -1126,11 +1126,12 @@ mob_db: (
 	MutationCount: 1
 	MutationStrength: 20
 	Drops: {
-		IceCube: 200
-		Diamond: 20
+		Snowball: 4000
 		BottleOfWater: 500
-		SilverMirror: 100
+		IceCube: 200
 		BookPage: 200
+		SilverMirror: 100
+		Diamond: 20
 	}
 },
 {
@@ -1407,6 +1408,7 @@ mob_db: (
 		PollettEgg: 400
 		PollettEgg: 400
 		WhiteFur: 500
+		Snowball: 3000
 	}
 },
 //ID,   Name,				   Jname,				  LV,	 HP,	 SP,	 EXP,	JEXP,   Range1, ATK1,   ATK2,   DEF,	MDEF,   STR,	AGI,	VIT,	INT,	DEX,	LUK,	Range2, Range3, Scale,  Race,   Element,Mode,   Speed,  Adelay, Amotion,Dmotion,Drop1id,Drop1per,Drop2id,Drop2%, Drop3id,Drop3%, Drop4id,Drop4%, Drop5id,Drop5%, Drop6id,Drop6%, Drop7id,Drop7%, Drop8id,Drop8%, Item1,  Item2,  MEXP,   ExpPer, MVP1id, MVP1per,MVP2id, MVP2per,MVP3id, MVP3per,mutationcount,mutationstrength
@@ -6719,8 +6721,8 @@ mob_db: (
 	Drops: {
 		RedApple: 100
 		EmptyBottle: 10
-		Arrow: 100
 		CoinBag: 400
+		Snowball: 600
 		WhiteBellTuber: 5000
 	}
 },
