item-db provide missing item function

--- a/world/map/npc/scripts.conf
+++ b/world/map/npc/scripts.conf
@@ -57,6 +57,7 @@ npc: npc/items/max_stat.txt
 npc: npc/items/nobow_item.txt
 npc: npc/items/love_potion.txt
 npc: npc/items/manapearl_item.txt
+npc: npc/items/underworld_troll.txt
 import: npc/_import.txt
 
 // magic
