FloydBook 2 item_db.conf

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -1108,6 +1108,30 @@ item_db: (
 	Subtype: "W_HUUMA"
 },
 {
+	Id: 907
+	AegisName: "FloydBook"
+	Name: "FloydBook"
+	Type: "IT_WEAPON"
+	Buy: 10000
+	Sell: 5000
+	Weight: 100
+	Atk: 1
+	Range: 3
+	Slots: 0
+	Loc: ["EQP_HAND_L", "EQP_HAND_R"]
+	WeaponLv: 1
+	EquipLv: 135
+	Refine: false
+	Trade: {
+		nodrop: true
+		notrade: true
+		noselltonpc: true
+		nomail: true
+		noauction: true
+	}
+	Subtype: "W_HUUMA"
+},
+{
 	Id: 1199
 	AegisName: "Arrow"
 	Name: "Arrow"
