Had to add to item_db.conf too

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -12793,6 +12793,7 @@ item_db: (
 	ViewSprite: 5128
 	Script: <"
 		bonus bMaxHPrate, 10;
+		bonus bHPrecovRate, 10;
 		bonus bInt, -readparam(bInt);
 	">
 },
