--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -13484,6 +13484,25 @@ item_db: (
 	Refine: false
 	ViewSprite: 5283
 },
+{
+	Id: 5287
+	AegisName: "HMCPirateHat"
+	Name: "Corsair Hat"
+	Type: "IT_ARMOR"
+	Buy: 1600
+	Sell: 800
+	Weight: 20
+	Def: 5
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 5287
+	Script: <"
+		bonus bMdef, 15;
+		bonus bMaxHP, 50;
+		bonus bCriticalDef, 5;
+	">
+},
 /* Usable items */
 {
 	Id: 501
