Clover amulets 2 amulet slot

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -1434,7 +1434,7 @@ item_db: (
 	Matk: 5
 	Def: 0
 	Slots: 0
-	Loc: "EQP_ACC_L"
+	Loc: "EQP_ARMOR"
 	Refine: false
 	ViewSprite: 829
 	Script: <"
@@ -1453,7 +1453,7 @@ item_db: (
 	Matk: 5
 	Def: 0
 	Slots: 0
-	Loc: "EQP_ACC_L"
+	Loc: "EQP_ARMOR"
 	Refine: false
 	ViewSprite: 830
 	Script: <"
@@ -1472,7 +1472,7 @@ item_db: (
 	Matk: 5
 	Def: 0
 	Slots: 0
-	Loc: "EQP_ACC_L"
+	Loc: "EQP_ARMOR"
 	Refine: false
 	ViewSprite: 831
 	Script: <"
@@ -1491,7 +1491,7 @@ item_db: (
 	Matk: 5
 	Def: 0
 	Slots: 0
-	Loc: "EQP_ACC_L"
+	Loc: "EQP_ARMOR"
 	Refine: false
 	ViewSprite: 832
 	Script: <"
