Mont Blanc monster database entry (experimental)

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -7838,4 +7838,36 @@ mob_db: (
 		TerraniteOre: 15
 	}
 },
+{
+	Id: 1173
+	SpriteName: "MontBlanc"
+	Name: "Mont Blanc"
+	Lv: 100
+	Hp: 65535
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 20
+	Mdef: 0
+	CriticalDef: 255
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+},
 )
