This is all I'm coding for today; I'll code the cannons on maybe tuesday?

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -7847,8 +7847,8 @@ mob_db: (
 	Sp: 0
 	Exp: 1
 	JExp: 1
-	AttackRange: 1
-	Attack: [0, 0]
+	AttackRange: 12
+	Attack: [30, 40]
 	Def: 20
 	Mdef: 0
 	CriticalDef: 255
@@ -7860,8 +7860,15 @@ mob_db: (
 		Dex: 0
 		Luk: 0
 	}
-	ViewRange: 9
-	ChaseRange: 10
+	Mode: {
+		Aggressive: true
+		Boss: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	ViewRange: 12
+	ChaseRange: 12
 	Size: 1
 	Race: 3
 	Element: (2, 1)
