The Return of Blanc

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -7884,4 +7884,43 @@ mob_db: (
 		LeatherGloves: 200
 	}
 },
+{
+	Id: 1173
+	SpriteName: "MontBlanc"
+	Name: "Mont Blanc"
+	Lv: 100
+	Hp: 65535
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 12
+	Attack: [30, 40]
+	Def: 20
+	Mdef: 0
+	CriticalDef: 255
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	Mode: {
+		Aggressive: true
+		Boss: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	ViewRange: 12
+	ChaseRange: 12
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+},
 )
