[maint]Typo at CI script, nothing to see here

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -107,6 +107,7 @@ clientdata:
   - git status
   - git config user.email "numa@themanaworld.org"
   - git config user.name "Numa"
+  - git add graphics/sprites/monsters/
   - git commit -a -m "Sync with Legacy repo" --author="Numa <numa@themanaworld.org>"
   - git push
   only:
