Correct a typo in gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -103,7 +103,10 @@ clientdata:
   - cd evolved
   - git checkout master
   - cp -v ../client-data/monsters.xml .
+  - rm -r graphics/sprites/monsters/*
   - cp -v --recursive ../client-data/graphics/sprites/monsters/* graphics/sprites/monsters/
+  - rm -r sfx/*
+  - cp -v --recursive ../client-data/sfx/* sfx/
   - git status
   - git config user.email "numa@themanaworld.org"
   - git config user.name "Numa"
