--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -15215,6 +15215,28 @@ item_db: (
 		callfunc "itheal", 200, 5;
 	">
 },
+{
+	Id: 5294
+	AegisName: "CrazyRum"
+	Name: "Crazy Rum"
+	Type: "IT_USABLE"
+	Buy: 40
+	Sell: 10
+	Weight: 2
+	Def: 0
+	Slots: 0
+	Refine: false
+	ViewSprite: 5294
+	Script: <"
+		callfunc("SC_Bonus", 60, SC_POISON, 1); //@EVOL2
+		//callfunc("SC_Bonus", 60000, SC_POISON, 1); //@TMWA
+		callfunc("SC_Bonus", 60, SC_PLUSATTACKPOWER, 50);
+		callfunc("SC_Bonus", 60, SC_ATTHASTE_POTION1, 45);
+		//callfunc("SC_Bonus", 60, SC_PHYS_SHIELD, 40); //@EVOL2
+		//callfunc("SC_Bonus", 60000, SC_PHYS_SHIELD, 40); //@TMWA
+		//misceffect FX_MAGIC_SHIELD, strcharinfo(0); //@TMWA
+	">
+},
 
 /* Legs Armor */
 {
