Item adds and changes

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -3698,7 +3698,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 500
 	Sell: 250
-	Weight: 10
+	Weight: 25
 	Def: 0
 	Refine: false
 	ViewSprite: 863
@@ -5225,10 +5225,75 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 0
 	Sell: 0
+	Weight: 1111
+	Refine: false
+	ViewSprite: 5293
+	Trade: {
+		notrade: true
+		nodrop: true
+		nostorage: false
+		nogstorage: false
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	}
+	//Disabled: true // @TMWA
+},
+{
+	Id: 5295
+	AegisName: "PinkFlowerSeed"
+	Name: "Pink Flower Seed"
+	Type: "IT_ETC"
+	Buy: 0
+	Sell: 0
+	Weight: 10
+	Def: 0
+	Refine: false
+	ViewSprite: 5295
+	Trade: {
+		notrade: true
+		nodrop: true
+		nostorage: false
+		nogstorage: false
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	}
+	//Disabled: true // @TMWA
+},
+{
+	Id: 5296
+	AegisName: "SilverIngot"
+	Name: "Silver Ingot"
+	Type: "IT_ETC"
+	Buy: 20000
+	Sell: 2200
 	Weight: 1000
 	Def: 0
 	Refine: false
-	ViewSprite: 5293
+	ViewSprite: 5296
+	Trade: {
+		notrade: true
+		nodrop: true
+		nostorage: false
+		nogstorage: false
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	}
+	//Disabled: true // @TMWA
+},
+{
+	Id: 5297
+	AegisName: "GoldenTooth"
+	Name: "Golden Tooth"
+	Type: "IT_ETC"
+	Buy: 20000
+	Sell: 2000
+	Weight: 40
+	Def: 0
+	Refine: false
+	ViewSprite: 5297
 	//Disabled: true // @TMWA
 },
 /* Chest Armor */
