--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -101,8 +101,6 @@ mob_db: (
 
 },
 ******************************************************************************/
-
-//ID,   Name,                   Jname,                  LV,     HP,     SP,     EXP,    JEXP,   Range1, ATK1,   ATK2,   DEF,    MDEF,   CRITDEF,STR,    AGI,    VIT,    INT,    DEX,    LUK,    Range2, Range3, Scale,  Race,   Element,Mode,   Speed,  Adelay, Amotion,Dmotion,Drop0id,Drop0%, Drop1id,Drop1%, Drop2id,Drop2%, Drop3id,Drop3%, Drop4id,Drop4%, Drop5id,Drop5%, Drop6id,Drop6%, Drop7id,Drop7%, Drop8id,Drop8%, Drop9id,Drop9%, Item1,  Item2,  MEXP,   ExpPer, MVP1id, MVP1per,MVP2id, MVP2per,MVP3id, MVP3per,mutationcount,mutationstrength
 {
 	Id: 1011
 	SpriteName: "FireGoblin"
@@ -1411,7 +1409,6 @@ mob_db: (
 		Snowball: 3000
 	}
 },
-//ID,   Name,				   Jname,				  LV,	 HP,	 SP,	 EXP,	JEXP,   Range1, ATK1,   ATK2,   DEF,	MDEF,   STR,	AGI,	VIT,	INT,	DEX,	LUK,	Range2, Range3, Scale,  Race,   Element,Mode,   Speed,  Adelay, Amotion,Dmotion,Drop1id,Drop1per,Drop2id,Drop2%, Drop3id,Drop3%, Drop4id,Drop4%, Drop5id,Drop5%, Drop6id,Drop6%, Drop7id,Drop7%, Drop8id,Drop8%, Item1,  Item2,  MEXP,   ExpPer, MVP1id, MVP1per,MVP2id, MVP2per,MVP3id, MVP3per,mutationcount,mutationstrength
 {
 	Id: 1009
 	SpriteName: "BlackScorpion"
@@ -1730,6 +1727,7 @@ mob_db: (
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
+		Boss: true
 	}
 	MoveSpeed: 250
 	AttackDelay: 1500
@@ -1987,6 +1985,7 @@ mob_db: (
 		UndeadEar: 200
 		UndeadEye: 150
 		Soul: 500
+		GoldenTooth: 10
 	}
 },
 {
@@ -2085,6 +2084,7 @@ mob_db: (
 		LeatherGloves: (35, "ODG_BASICSTAT")
 		DiseasedHeart: 500
 		Soul: 500
+		GoldenTooth: 10
 	}
 },
 {
@@ -2562,7 +2562,6 @@ mob_db: (
 		JoyplimScroll: 40
 	}
 },
-//ID,   Name,				   Jname,				  LV,	 HP,	 SP,	 EXP,	JEXP,   Range1, ATK1,   ATK2,   DEF,	MDEF,   STR,	AGI,	VIT,	INT,	DEX,	LUK,	Range2, Range3, Scale,  Race,   Element,Mode,   Speed,  Adelay, Amotion,Dmotion,Drop1id,Drop1per,Drop2id,Drop2%, Drop3id,Drop3%, Drop4id,Drop4%, Drop5id,Drop5%, Drop6id,Drop6%, Drop7id,Drop7%, Drop8id,Drop8%, Item1,  Item2,  MEXP,   ExpPer, MVP1id, MVP1per,MVP2id, MVP2per,MVP3id, MVP3per,mutationcount,mutationstrength
 {
 	Id: 1114
 	SpriteName: "Nutcracker"
@@ -2763,6 +2762,7 @@ mob_db: (
 		PileOfAsh: 500
 		IronPowder: 250
 		Pearl: 250
+		PirateHat: (100, "ODG_BASICSTAT")
 		CaptainsHat: (1, "ODG_BASICSTAT")
 	}
 },
@@ -2807,6 +2807,14 @@ mob_db: (
 	AttackDelay: 700
 	AttackMotion: 672
 	DamageMotion: 480
+	Drops: {
+		Beer: 1000
+		Orange: 1000
+		PileOfAsh: 500
+		IronPowder: 250
+		Pearl: 250
+		Eyepatch: (1, "ODG_BASICSTAT")
+	}
 },
 {
 	Id: 1123
@@ -3402,7 +3410,6 @@ mob_db: (
 		JoyplimScroll: 10
 	}
 },
-//ID,   Name,				   Jname,				  LV,	 HP,	 SP,	 EXP,	JEXP,   Range1, ATK1,   ATK2,   DEF,	MDEF,   STR,	AGI,	VIT,	INT,	DEX,	LUK,	Range2, Range3, Scale,  Race,   Element,Mode,   Speed,  Adelay, Amotion,Dmotion,Drop1id,Drop1per,Drop2id,Drop2%, Drop3id,Drop3%, Drop4id,Drop4%, Drop5id,Drop5%, Drop6id,Drop6%, Drop7id,Drop7%, Drop8id,Drop8%, Item1,  Item2,  MEXP,   ExpPer, MVP1id, MVP1per,MVP2id, MVP2per,MVP3id, MVP3per,mutationcount,mutationstrength
 {
 	Id: 1138
 	SpriteName: "ManaGuard"
@@ -3437,6 +3444,7 @@ mob_db: (
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
+		Boss: true
 	}
 	MoveSpeed: 210
 	AttackDelay: 1200
@@ -3523,6 +3531,7 @@ mob_db: (
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
+		Boss: true
 	}
 	MoveSpeed: 310
 	AttackDelay: 1200
@@ -3563,6 +3572,7 @@ mob_db: (
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
+		Boss: true
 	}
 	MoveSpeed: 310
 	AttackDelay: 1200
@@ -3644,6 +3654,7 @@ mob_db: (
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
+		Boss: true
 	}
 	MoveSpeed: 210
 	AttackDelay: 1200
@@ -3772,6 +3783,7 @@ mob_db: (
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
+		Boss: true
 	}
 	MoveSpeed: 160
 	AttackDelay: 600
@@ -3812,6 +3824,7 @@ mob_db: (
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
+		Boss: true
 	}
 	MoveSpeed: 240
 	AttackDelay: 1400
@@ -3852,6 +3865,7 @@ mob_db: (
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
+		Boss: true
 	}
 	MoveSpeed: 320
 	AttackDelay: 1000
@@ -3904,6 +3918,7 @@ mob_db: (
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
+		Boss: true
 	}
 	MoveSpeed: 240
 	AttackDelay: 800
@@ -3955,6 +3970,7 @@ mob_db: (
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
+		Boss: true
 	}
 	MoveSpeed: 180
 	AttackDelay: 1050
@@ -3970,7 +3986,6 @@ mob_db: (
 		SilkPants: (15, "ODG_BASICSTAT")
 	}
 },
-//ID,   Name,				   Jname,				  LV,	 HP,	 SP,	 EXP,	JEXP,   Range1, ATK1,   ATK2,   DEF,	MDEF,   STR,	AGI,	VIT,	INT,	DEX,	LUK,	Range2, Range3, Scale,  Race,   Element,Mode,   Speed,  Adelay, Amotion,Dmotion,Drop1id,Drop1per,Drop2id,Drop2%, Drop3id,Drop3%, Drop4id,Drop4%, Drop5id,Drop5%, Drop6id,Drop6%, Drop7id,Drop7%, Drop8id,Drop8%, Item1,  Item2,  MEXP,   ExpPer, MVP1id, MVP1per,MVP2id, MVP2per,MVP3id, MVP3per,mutationcount,mutationstrength
 {
 	Id: 1151
 	SpriteName: "VoidFlower"
@@ -4488,8 +4503,6 @@ mob_db: (
 	AttackMotion: 672
 	DamageMotion: 50
 },
-
-//ID,   Name,				   Jname,				  LV,	 HP,	 SP,	 EXP,	JEXP,   Range1, ATK1,   ATK2,   DEF,	MDEF,   STR,	AGI,	VIT,	INT,	DEX,	LUK,	Range2, Range3, Scale,  Race,   Element,Mode,   Speed,  Adelay, Amotion,Dmotion,Drop1id,Drop1per,Drop2id,Drop2%, Drop3id,Drop3%, Drop4id,Drop4%, Drop5id,Drop5%, Drop6id,Drop6%, Drop7id,Drop7%, Drop8id,Drop8%, Item1,  Item2,  MEXP,   ExpPer, MVP1id, MVP1per,MVP2id, MVP2per,MVP3id, MVP3per,mutationcount,mutationstrength
 {
 	Id: 1004
 	SpriteName: "RedScorpion"
@@ -4683,6 +4696,7 @@ mob_db: (
 		Skull: 300
 		DarkCrystal: 1000
 		DiseasedHeart: 250
+		GoldenTooth: 10
 	}
 },
 {
@@ -4733,6 +4747,7 @@ mob_db: (
 		Skull: 300
 		DarkCrystal: 1000
 		DiseasedHeart: 250
+		GoldenTooth: 10
 	}
 },
 {
@@ -5035,6 +5050,7 @@ mob_db: (
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
+		Boss: true
 	}
 	MoveSpeed: 340
 	AttackDelay: 1800
@@ -5048,6 +5064,7 @@ mob_db: (
 		Skull: 135
 		DarkCrystal: 4
 		DiseasedHeart: 250
+		GoldenTooth: 10
 	}
 },
 {
@@ -5098,6 +5115,7 @@ mob_db: (
 		JellySkull: 250
 		TonoriDelight: 400
 		DiseasedHeart: 250
+		GoldenTooth: 40
 	}
 },
 {
@@ -5148,6 +5166,7 @@ mob_db: (
 		Marshmallow: 400
 		CandyPumpkin: 250
 		DiseasedHeart: 250
+		GoldenTooth: 40
 	}
 },
 {
@@ -5198,6 +5217,7 @@ mob_db: (
 		CandyPumpkin: 250
 		JellySkull: 250
 		DiseasedHeart: 250
+		GoldenTooth: 40
 	}
 },
 {
@@ -5480,7 +5500,6 @@ mob_db: (
 		Looter: true
 		Aggressive: true
 		Assist: true
-		Boss: true
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
@@ -5496,6 +5515,7 @@ mob_db: (
 		Bone: 400
 		Skull: 300
 		IronPowder: 100
+		GoldenTooth: 20
 	}
 },
 {
@@ -5602,6 +5622,7 @@ mob_db: (
 		DarkCrystal: 50
 		DarkCrystal: 500
 		DiseasedHeart: 250
+		GoldenTooth: 10
 	}
 },
 {
@@ -5653,7 +5674,6 @@ mob_db: (
 		DarkCrystal: 800
 	}
 },
-//ID,   Name,				   Jname,				  LV,	 HP,	 SP,	 EXP,	JEXP,   Range1, ATK1,   ATK2,   DEF,	MDEF,   STR,	AGI,	VIT,	INT,	DEX,	LUK,	Range2, Range3, Scale,  Race,   Element,Mode,   Speed,  Adelay, Amotion,Dmotion,Drop1id,Drop1per,Drop2id,Drop2%, Drop3id,Drop3%, Drop4id,Drop4%, Drop5id,Drop5%, Drop6id,Drop6%, Drop7id,Drop7%, Drop8id,Drop8%, Item1,  Item2,  MEXP,   ExpPer, MVP1id, MVP1per,MVP2id, MVP2per,MVP3id, MVP3per,mutationcount,mutationstrength
 {
 	Id: 1007
 	SpriteName: "YellowSlime"
@@ -6094,9 +6114,6 @@ mob_db: (
 		KidBook: 20
 	}
 },
-
-
-//ID,   Name,				   Jname,				  LV,	 HP,	 SP,	 EXP,	JEXP,   Range1, ATK1,   ATK2,   DEF,	MDEF,   STR,	AGI,	VIT,	INT,	DEX,	LUK,	Range2, Range3, Scale,  Race,   Element,Mode,   Speed,  Adelay, Amotion,Dmotion,Drop1id,Drop1per,Drop2id,Drop2%, Drop3id,Drop3%, Drop4id,Drop4%, Drop5id,Drop5%, Drop6id,Drop6%, Drop7id,Drop7%, Drop8id,Drop8%, Item1,  Item2,  MEXP,   ExpPer, MVP1id, MVP1per,MVP2id, MVP2per,MVP3id, MVP3per,mutationcount,mutationstrength
 {
 	Id: 1002
 	SpriteName: "Maggot"
@@ -6821,7 +6838,6 @@ mob_db: (
 		Milk: 30
 	}
 },
-//ID,   Name,				   Jname,				  LV,	 HP,	 SP,	 EXP,	JEXP,   Range1, ATK1,   ATK2,   DEF,	MDEF,   STR,	AGI,	VIT,	INT,	DEX,	LUK,	Range2, Range3, Scale,  Race,   Element,Mode,   Speed,  Adelay, Amotion,Dmotion,Drop1id,Drop1per,Drop2id,Drop2%, Drop3id,Drop3%, Drop4id,Drop4%, Drop5id,Drop5%, Drop6id,Drop6%, Drop7id,Drop7%, Drop8id,Drop8%, Item1,  Item2,  MEXP,   ExpPer, MVP1id, MVP1per,MVP2id, MVP2per,MVP3id, MVP3per,mutationcount,mutationstrength
 {
 	Id: 1005
 	SpriteName: "GreenSlime"
@@ -7322,7 +7338,6 @@ mob_db: (
 		Looter: true
 		Aggressive: true
 		Assist: true
-		Boss: true
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
@@ -7852,12 +7867,12 @@ mob_db: (
 	Mdef: 0
 	CriticalDef: 255
 	Stats: {
-		Str: 15
-		Agi: 10
-		Vit: 30
-		Int: 5
-		Dex: 20
-		Luk: 10
+	Str: 15
+	Agi: 10
+	Vit: 30
+	Int: 5
+	Dex: 20
+	Luk: 10
 	}
 	Mode: {
 		Aggressive: true
