Add bitwise operation core

--- a/world/map/npc/scripts.conf
+++ b/world/map/npc/scripts.conf
@@ -1,5 +1,8 @@
 // This is the main script import file
 
+// Core Functions
+npc: npc/functions/bitwise.txt
+
 // NPC Functions
 npc: npc/functions/banker.txt
 npc: npc/functions/barber.txt
