mob kill handler

--- a/world/map/npc/scripts.conf
+++ b/world/map/npc/scripts.conf
@@ -16,7 +16,6 @@ npc: npc/functions/game_rules.txt
 npc: npc/functions/inn.txt
 npc: npc/functions/item_menu.txt
 npc: npc/functions/magic.txt
-npc: npc/functions/mob_points.txt
 npc: npc/functions/process_equip.txt
 npc: npc/functions/slot_machine.txt
 npc: npc/functions/soul_menhir.txt
@@ -61,6 +60,12 @@ npc: npc/items/nobow_item.txt
 npc: npc/items/love_potion.txt
 npc: npc/items/manapearl_item.txt
 npc: npc/items/underworld_troll.txt
+
+// Mob Functions
+npc: npc/mobs/mob_points.txt
+npc: npc/mobs/mob_kill_handler.txt
+
+// Map Functions
 import: npc/_import.txt
 
 // magic
