Apply 1 suggestion(s) to 1 file(s)

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -724,7 +724,7 @@ item_db: (
 	Atk: 180
 	Range: 2
 	Slots: 1
-	Loc: "EQP_HAND_L", "EQP_HAND_R"
+	Loc: ["EQP_HAND_L", "EQP_HAND_R"]
 	WeaponLv: 1
 	EquipLv: 1
 	Refine: false
