Audit of ranges and weights in items and mobs. some dmg and other small changes.

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -216,8 +216,8 @@ item_db: (
 	Type: "IT_WEAPON"
 	Buy: 8000
 	Sell: 4000
-	Weight: 1500
-	Atk: 90
+	Weight: 1200
+	Atk: 110
 	Range: 1
 	Slots: 1
 	Loc: "EQP_HAND_R"
@@ -264,9 +264,9 @@ item_db: (
 	Type: "IT_WEAPON"
 	Buy: 20
 	Sell: 10
-	Weight: 10
-	Def: 100
-	Range: 1
+	Weight: 1200
+	Atk: 200
+	Range: 2
 	Slots: 1
 	Loc: "EQP_HAND_R"
 	WeaponLv: 1
@@ -286,8 +286,9 @@ item_db: (
 	Buy: 20
 	Sell: 10
 	Weight: 1400
-	Atk: 180
-	Range: 2
+	Atk: 250
+	Def: 10
+	Range: 3
 	Slots: 1
 	Loc: ["EQP_HAND_L", "EQP_HAND_R"]
 	WeaponLv: 2
@@ -307,7 +308,7 @@ item_db: (
 	Buy: 20
 	Sell: 10
 	Weight: 1200
-	Atk: 100
+	Atk: 120
 	Range: 1
 	Slots: 1
 	Loc: "EQP_HAND_R"
@@ -328,7 +329,7 @@ item_db: (
 	Buy: 20
 	Sell: 10
 	Weight: 1200
-	Atk: 100
+	Atk: 120
 	Range: 1
 	Slots: 1
 	Loc: "EQP_HAND_R"
@@ -349,7 +350,7 @@ item_db: (
 	Buy: 10000
 	Sell: 5000
 	Weight: 300
-	Atk: 100
+	Atk: 120
 	Range: 1
 	Slots: 1
 	Loc: "EQP_HAND_R"
@@ -366,7 +367,7 @@ item_db: (
 	Type: "IT_WEAPON"
 	Buy: 10000
 	Sell: 6000
-	Weight: 450
+	Weight: 250
 	Atk: 115
 	Range: 1
 	Slots: 1
@@ -384,7 +385,7 @@ item_db: (
 	Type: "IT_WEAPON"
 	Buy: 20000
 	Sell: 8000
-	Weight: 900
+	Weight: 500
 	Atk: 100
 	Range: 1
 	Slots: 1
@@ -402,8 +403,8 @@ item_db: (
 	Type: "IT_WEAPON"
 	Buy: 8000
 	Sell: 4000
-	Weight: 200
-	Atk: 100
+	Weight: 700
+	Atk: 120
 	Range: 1
 	Slots: 1
 	Loc: "EQP_HAND_R"
@@ -423,7 +424,7 @@ item_db: (
 	Type: "IT_WEAPON"
 	Buy: 8000
 	Sell: 4000
-	Weight: 300
+	Weight: 900
 	Atk: 270
 	Range: 1
 	Slots: 1
@@ -448,7 +449,7 @@ item_db: (
 	Buy: 8000
 	Sell: 4000
 	Weight: 600
-	Atk: 100
+	Atk: 120
 	Range: 1
 	Slots: 1
 	Loc: "EQP_HAND_R"
@@ -572,7 +573,7 @@ item_db: (
 	Sell: 4000
 	Weight: 300
 	Atk: 100
-	Range: 1
+	Range: 3
 	Slots: 1
 	Loc: "EQP_HAND_R"
 	WeaponLv: 1
@@ -592,7 +593,7 @@ item_db: (
 	Buy: 30000
 	Sell: 15000
 	Weight: 1500
-	Atk: 140
+	Atk: 160
 	Range: 1
 	Slots: 1
 	Loc: "EQP_HAND_R"
@@ -718,16 +719,17 @@ item_db: (
 	Type: "IT_WEAPON"
 	Buy: 8000
 	Sell: 4000
-	Weight: 100
-	Atk: 125
-	Range: 1
+	Weight: 1500
+	Def: 7
+	Atk: 180
+	Range: 2
 	Slots: 1
-	Loc: "EQP_HAND_R"
+	Loc: ["EQP_HAND_L", "EQP_HAND_R"]
 	WeaponLv: 1
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 1
-	Subtype: "W_1HSWORD"
+	Subtype: "W_2HSWORD"
 	Script: <"
 		bonus bMaxHP, 50;
 		bonus2 bHPDrainRate, 100, 5;
@@ -744,8 +746,8 @@ item_db: (
 	Type: "IT_WEAPON"
 	Buy: 1000
 	Sell: 500
-	Weight: 200
-	Atk: 15
+	Weight: 1500
+	Atk: 140
 	Range: 1
 	Slots: 1
 	Loc: "EQP_HAND_R"
@@ -765,8 +767,8 @@ item_db: (
 	Type: "IT_WEAPON"
 	Buy: 1000
 	Sell: 500
-	Weight: 200
-	Atk: 15
+	Weight: 1500
+	Atk: 150
 	Range: 1
 	Slots: 1
 	Loc: "EQP_HAND_R"
@@ -786,8 +788,8 @@ item_db: (
 	Type: "IT_WEAPON"
 	Buy: 8000
 	Sell: 4000
-	Weight: 100
-	Atk: 141
+	Weight: 1050
+	Atk: 161
 	Def: -2
 	Range: 1
 	Slots: 1
@@ -813,8 +815,8 @@ item_db: (
 	Type: "IT_WEAPON"
 	Buy: 1000
 	Sell: 500
-	Weight: 200
-	Atk: 15
+	Weight: 1300
+	Atk: 150
 	Range: 1
 	Slots: 1
 	Loc: "EQP_HAND_R"
@@ -835,7 +837,7 @@ item_db: (
 	Buy: 1000
 	Sell: 500
 	Weight: 200
-	Atk: 15
+	Atk: 110
 	Range: 1
 	Slots: 1
 	Loc: "EQP_HAND_R"
@@ -855,9 +857,10 @@ item_db: (
 	Type: "IT_WEAPON"
 	Buy: 20
 	Sell: 10
-	Weight: 1600
-	Atk: 140
-	Range: 2
+	Weight: 3000
+	Def: 8
+	Atk: 170
+	Range: 3
 	Slots: 1
 	Loc: ["EQP_HAND_L", "EQP_HAND_R"]
 	WeaponLv: 2
@@ -877,7 +880,8 @@ item_db: (
 	Buy: 100
 	Sell: 50
 	Weight: 1200
-	Atk: 100
+	Def: 5
+	Atk: 120
 	Range: 2
 	Slots: 1
 	Loc: ["EQP_HAND_L", "EQP_HAND_R"]
@@ -885,7 +889,7 @@ item_db: (
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 1
-	Subtype: "W_2HSPEAR"
+	Subtype: "W_2HSTAFF"
 },
 {
 	Id: 758
@@ -894,10 +898,11 @@ item_db: (
 	Type: "IT_WEAPON"
 	Buy: 4000
 	Sell: 2000
-	Weight: 1000
+	Weight: 800
+	Def: 3
 	Atk: 50
 	Matk: 10
-	Range: 1
+	Range: 2
 	Slots: 1
 	Loc: ["EQP_HAND_L", "EQP_HAND_R"]
 	WeaponLv: 1
@@ -924,7 +929,7 @@ item_db: (
 	Weight: 1000
 	Atk: 50
 	Matk: 15
-	Range: 1
+	Range: 2
 	Slots: 1
 	Loc: ["EQP_HAND_L", "EQP_HAND_R"]
 	WeaponLv: 1
@@ -994,7 +999,7 @@ item_db: (
 	Buy: 2000
 	Sell: 1000
 	Weight: 1000
-	Atk: 110
+	Atk: 130
 	Range: 1
 	Slots: 1
 	Loc: "EQP_HAND_R"
@@ -1053,7 +1058,7 @@ item_db: (
 	Type: "IT_WEAPON"
 	Buy: 500
 	Sell: 50
-	Weight: 10
+	Weight: 50
 	Atk: 5
 	Range: 4
 	Slots: 1
@@ -1097,7 +1102,7 @@ item_db: (
 	Type: "IT_WEAPON"
 	Buy: 10000
 	Sell: 5000
-	Weight: 100
+	Weight: 350
 	Atk: 1
 	Range: 3
 	Slots: 1
@@ -1114,7 +1119,7 @@ item_db: (
 	Type: "IT_WEAPON"
 	Buy: 10000
 	Sell: 5000
-	Weight: 100
+	Weight: 350
 	Atk: 1
 	Range: 3
 	Slots: 1
@@ -1506,7 +1511,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 5000
 	Sell: 2500
-	Weight: 100
+	Weight: 222
 	Matk: 5
 	Def: 0
 	Slots: 0
@@ -1545,7 +1550,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 1000
 	Sell: 1
-	Weight: 1
+	Weight: 10
 	Def: 0
 	Slots: 0
 	Loc: "EQP_ARMOR"
@@ -1580,7 +1585,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 5000
 	Sell: 2500
-	Weight: 1
+	Weight: 25
 	Def: 0
 	Slots: 0
 	Loc: "EQP_ACC_R"
@@ -1597,7 +1602,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 5000
 	Sell: 2500
-	Weight: 1
+	Weight: 25
 	Def: 0
 	Slots: 0
 	Loc: "EQP_ACC_R"
@@ -1614,7 +1619,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 5000
 	Sell: 2500
-	Weight: 1
+	Weight: 25
 	Def: 0
 	Slots: 0
 	Loc: "EQP_ACC_R"
@@ -1631,7 +1636,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 5000
 	Sell: 2500
-	Weight: 1
+	Weight: 25
 	Def: 0
 	Slots: 0
 	Loc: "EQP_ACC_R"
@@ -1648,7 +1653,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 5000
 	Sell: 2500
-	Weight: 1
+	Weight: 25
 	Def: 0
 	Slots: 0
 	Loc: "EQP_ACC_R"
@@ -1665,7 +1670,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 5000
 	Sell: 2500
-	Weight: 1
+	Weight: 25
 	Def: 0
 	Slots: 0
 	Loc: "EQP_ACC_R"
@@ -1682,7 +1687,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 100000
 	Sell: 2500
-	Weight: 1
+	Weight: 5
 	Def: 0
 	Slots: 0
 	Loc: "EQP_ACC_R"
@@ -1696,7 +1701,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2500
 	Sell: 0
-	Weight: 10
+	Weight: 20
 	Def: 0
 	Slots: 0
 	Loc: "EQP_ACC_L"
@@ -1727,7 +1732,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 0
 	Sell: 0
-	Weight: 1
+	Weight: 3
 	Def: 0
 	Slots: 0
 	Loc: "EQP_ACC_R"
@@ -1744,7 +1749,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 1000
 	Sell: 1
-	Weight: 1
+	Weight: 3
 	Matk: 22
 	Def: 0
 	Slots: 0
@@ -1766,7 +1771,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 1000
 	Sell: 1
-	Weight: 1
+	Weight: 5
 	Def: 0
 	Slots: 0
 	Loc: "EQP_ACC_R"
@@ -1787,7 +1792,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 1000
 	Sell: 1
-	Weight: 1
+	Weight: 10
 	Def: 0
 	Slots: 0
 	Loc: "EQP_ARMOR"
@@ -1809,7 +1814,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 500
-	Weight: 80
+	Weight: 100
 	Matk: -2
 	Def: 2
 	Slots: 0
@@ -1827,7 +1832,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 5000
 	Sell: 600
-	Weight: 50
+	Weight: 110
 	Matk: -3
 	Def: 3
 	Slots: 0
@@ -1845,7 +1850,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 20000
 	Sell: 3000
-	Weight: 25
+	Weight: 110
 	Matk: -10
 	Def: 3
 	Slots: 0
@@ -1937,7 +1942,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 500
-	Weight: 30
+	Weight: 10
 	Matk: 1
 	Def: 1
 	Slots: 0
@@ -1955,7 +1960,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 500
-	Weight: 30
+	Weight: 10
 	Matk: 1
 	Def: 1
 	Slots: 0
@@ -1973,7 +1978,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 500
-	Weight: 30
+	Weight: 10
 	Matk: 1
 	Def: 1
 	Slots: 0
@@ -1991,7 +1996,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 500
-	Weight: 30
+	Weight: 10
 	Matk: 1
 	Def: 1
 	Slots: 0
@@ -2009,7 +2014,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 500
-	Weight: 30
+	Weight: 10
 	Matk: 1
 	Def: 1
 	Slots: 0
@@ -2027,7 +2032,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 500
-	Weight: 30
+	Weight: 10
 	Matk: 1
 	Def: 1
 	Slots: 0
@@ -2045,7 +2050,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 500
-	Weight: 30
+	Weight: 10
 	Matk: 1
 	Def: 1
 	Slots: 0
@@ -2063,7 +2068,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 500
-	Weight: 30
+	Weight: 10
 	Matk: 1
 	Def: 1
 	Slots: 0
@@ -2081,7 +2086,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 500
-	Weight: 30
+	Weight: 10
 	Matk: 1
 	Def: 1
 	Slots: 0
@@ -2099,7 +2104,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 500
-	Weight: 30
+	Weight: 10
 	Matk: 1
 	Def: 1
 	Slots: 0
@@ -3086,7 +3091,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 0
 	Sell: 0
-	Weight: 5
+	Weight: 3
 	Def: 0
 	Refine: false
 	ViewSprite: 730
@@ -3370,7 +3375,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 1000
 	Sell: 500
-	Weight: 5
+	Weight: 3
 	Def: 0
 	Refine: false
 	ViewSprite: 819
@@ -3382,7 +3387,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 1000
 	Sell: 500
-	Weight: 5
+	Weight: 3
 	Def: 0
 	Refine: false
 	ViewSprite: 820
@@ -3394,7 +3399,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 1000
 	Sell: 500
-	Weight: 5
+	Weight: 3
 	Def: 0
 	Refine: false
 	ViewSprite: 821
@@ -3406,7 +3411,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 1000
 	Sell: 500
-	Weight: 5
+	Weight: 3
 	Def: 0
 	Refine: false
 	ViewSprite: 822
@@ -3418,7 +3423,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 1000
 	Sell: 500
-	Weight: 5
+	Weight: 3
 	Def: 0
 	Refine: false
 	ViewSprite: 823
@@ -3430,7 +3435,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 1000
 	Sell: 500
-	Weight: 5
+	Weight: 3
 	Def: 0
 	Refine: false
 	ViewSprite: 824
@@ -3494,7 +3499,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 50
 	Sell: 25
-	Weight: 500
+	Weight: 200
 	Def: 0
 	Refine: false
 	ViewSprite: 841
@@ -3506,7 +3511,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 50
 	Sell: 25
-	Weight: 500
+	Weight: 200
 	Def: 0
 	Refine: false
 	ViewSprite: 842
@@ -3518,7 +3523,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 50
 	Sell: 25
-	Weight: 500
+	Weight: 200
 	Def: 0
 	Refine: false
 	ViewSprite: 843
@@ -3530,7 +3535,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 50
 	Sell: 25
-	Weight: 500
+	Weight: 200
 	Def: 0
 	Refine: false
 	ViewSprite: 844
@@ -3542,7 +3547,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 50
 	Sell: 25
-	Weight: 500
+	Weight: 200
 	Def: 0
 	Refine: false
 	ViewSprite: 845
@@ -3554,7 +3559,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 50
 	Sell: 25
-	Weight: 500
+	Weight: 200
 	Def: 0
 	Refine: false
 	ViewSprite: 846
@@ -3662,7 +3667,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 50
 	Sell: 25
-	Weight: 20
+	Weight: 10
 	Def: 0
 	Refine: false
 	ViewSprite: 860
@@ -3818,7 +3823,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 50
 	Sell: 25
-	Weight: 1
+	Weight: 7
 	Def: 0
 	Refine: false
 	ViewSprite: 892
@@ -3830,7 +3835,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 100
 	Sell: 50
-	Weight: 1
+	Weight: 7
 	Def: 0
 	Refine: false
 	ViewSprite: 893
@@ -3842,7 +3847,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 200
 	Sell: 100
-	Weight: 1
+	Weight: 7
 	Def: 0
 	Refine: false
 	ViewSprite: 894
@@ -3854,7 +3859,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 400
 	Sell: 200
-	Weight: 1
+	Weight: 7
 	Def: 0
 	Refine: false
 	ViewSprite: 895
@@ -3866,7 +3871,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 600
 	Sell: 300
-	Weight: 1
+	Weight: 7
 	Def: 0
 	Refine: false
 	ViewSprite: 896
@@ -5303,7 +5308,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 1000
-	Weight: 20
+	Weight: 120
 	Matk: -12
 	Def: 4
 	Slots: 0
@@ -5321,7 +5326,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 1000
-	Weight: 20
+	Weight: 140
 	Matk: -18
 	Def: 6
 	Slots: 0
@@ -5339,7 +5344,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 1000
-	Weight: 30
+	Weight: 130
 	Matk: -18
 	Def: 6
 	Slots: 0
@@ -5357,7 +5362,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 6000
 	Sell: 3000
-	Weight: 35
+	Weight: 135
 	Matk: -24
 	Def: 8
 	Slots: 0
@@ -5429,7 +5434,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 8000
 	Sell: 4000
-	Weight: 5
+	Weight: 50
 	Matk: 20
 	Def: 5
 	Slots: 0
@@ -5449,7 +5454,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 8000
 	Sell: 4000
-	Weight: 5
+	Weight: 50
 	Matk: 20
 	Def: 5
 	Slots: 0
@@ -5469,7 +5474,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 8000
 	Sell: 4000
-	Weight: 5
+	Weight: 50
 	Matk: 20
 	Def: 5
 	Slots: 0
@@ -5487,7 +5492,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 8000
 	Sell: 4000
-	Weight: 5
+	Weight: 50
 	Matk: 20
 	Def: 5
 	Slots: 0
@@ -5505,7 +5510,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 8000
 	Sell: 4000
-	Weight: 5
+	Weight: 50
 	Matk: 20
 	Def: 5
 	Slots: 0
@@ -5597,7 +5602,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 8000
 	Sell: 4000
-	Weight: 5
+	Weight: 90
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_MID"
@@ -6114,7 +6119,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 6000
 	Sell: 3000
-	Weight: 35
+	Weight: 135
 	Matk: -16
 	Def: 8
 	Slots: 0
@@ -6132,7 +6137,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 6000
 	Sell: 3000
-	Weight: 35
+	Weight: 135
 	Matk: -16
 	Def: 8
 	Slots: 0
@@ -6150,7 +6155,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 6000
 	Sell: 3000
-	Weight: 35
+	Weight: 135
 	Matk: -16
 	Def: 8
 	Slots: 0
@@ -6168,7 +6173,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 6000
 	Sell: 3000
-	Weight: 35
+	Weight: 135
 	Matk: -16
 	Def: 8
 	Slots: 0
@@ -6186,7 +6191,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 6000
 	Sell: 3000
-	Weight: 35
+	Weight: 135
 	Matk: -16
 	Def: 8
 	Slots: 0
@@ -6204,7 +6209,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 6000
 	Sell: 3000
-	Weight: 35
+	Weight: 135
 	Matk: -16
 	Def: 8
 	Slots: 0
@@ -6222,7 +6227,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 6000
 	Sell: 3000
-	Weight: 35
+	Weight: 135
 	Matk: -16
 	Def: 8
 	Slots: 0
@@ -6240,7 +6245,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 6000
 	Sell: 3000
-	Weight: 35
+	Weight: 135
 	Matk: -16
 	Def: 8
 	Slots: 0
@@ -6258,7 +6263,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 6000
 	Sell: 3000
-	Weight: 35
+	Weight: 135
 	Matk: -16
 	Def: 8
 	Slots: 0
@@ -6276,7 +6281,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 6000
 	Sell: 3000
-	Weight: 35
+	Weight: 135
 	Matk: -16
 	Def: 8
 	Slots: 0
@@ -6294,7 +6299,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 1000
-	Weight: 35
+	Weight: 135
 	Matk: -12
 	Def: 6
 	Slots: 0
@@ -6312,7 +6317,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 1000
-	Weight: 35
+	Weight: 135
 	Matk: -12
 	Def: 6
 	Slots: 0
@@ -6330,7 +6335,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 1000
-	Weight: 35
+	Weight: 135
 	Matk: -12
 	Def: 6
 	Slots: 0
@@ -6348,7 +6353,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 1000
-	Weight: 35
+	Weight: 135
 	Matk: -12
 	Def: 6
 	Slots: 0
@@ -6366,7 +6371,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 1000
-	Weight: 35
+	Weight: 135
 	Matk: -12
 	Def: 6
 	Slots: 0
@@ -6384,7 +6389,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 1000
-	Weight: 35
+	Weight: 135
 	Matk: -12
 	Def: 6
 	Slots: 0
@@ -6402,7 +6407,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 1000
-	Weight: 35
+	Weight: 135
 	Matk: -12
 	Def: 6
 	Slots: 0
@@ -6420,7 +6425,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 1000
-	Weight: 35
+	Weight: 135
 	Matk: -12
 	Def: 6
 	Slots: 0
@@ -6438,7 +6443,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 1000
-	Weight: 35
+	Weight: 135
 	Matk: -12
 	Def: 6
 	Slots: 0
@@ -6456,7 +6461,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 2000
 	Sell: 1000
-	Weight: 35
+	Weight: 135
 	Matk: -12
 	Def: 6
 	Slots: 0
@@ -6474,7 +6479,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 8000
 	Sell: 4000
-	Weight: 30
+	Weight: 90
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_MID"
@@ -6488,7 +6493,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 8000
 	Sell: 4000
-	Weight: 30
+	Weight: 90
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_MID"
@@ -6502,7 +6507,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 8000
 	Sell: 4000
-	Weight: 30
+	Weight: 90
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_MID"
@@ -6516,7 +6521,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 8000
 	Sell: 4000
-	Weight: 30
+	Weight: 90
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_MID"
@@ -6530,7 +6535,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 8000
 	Sell: 4000
-	Weight: 30
+	Weight: 90
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_MID"
@@ -6544,7 +6549,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 8000
 	Sell: 4000
-	Weight: 30
+	Weight: 90
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_MID"
@@ -6558,7 +6563,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 8000
 	Sell: 4000
-	Weight: 30
+	Weight: 90
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_MID"
@@ -6572,7 +6577,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 8000
 	Sell: 4000
-	Weight: 30
+	Weight: 90
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_MID"
@@ -6586,7 +6591,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 8000
 	Sell: 4000
-	Weight: 30
+	Weight: 90
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_MID"
@@ -6600,7 +6605,7 @@ item_db: (
 	Type: "IT_ARMOR"
 	Buy: 8000
 	Sell: 4000
-	Weight: 30
+	Weight: 90
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_MID"
