changed back to 1-handed and altered stats to be rid of the curse

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -720,19 +720,19 @@ item_db: (
 	Buy: 8000
 	Sell: 4000
 	Weight: 1500
-	Def: 7
-	Atk: 180
+	Def: 5
+	Atk: 170
 	Range: 2
 	Slots: 1
-	Loc: ["EQP_HAND_L", "EQP_HAND_R"]
+	Loc: "EQP_HAND_R"
 	WeaponLv: 1
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 1
-	Subtype: "W_2HSWORD"
+	Subtype: "W_1HSWORD"
 	Script: <"
-		bonus bMaxHP, 50;
-		bonus2 bHPDrainRate, 100, 5;
+		//bonus bMaxHP, 50;
+		//bonus2 bHPDrainRate, 100, 5;
 		bonus bCriticalDef, 2;
 		bonus bStr, 1;
 		bonus bAspdRate, 1;
