Jackal edit #2. Also changed all range 3 melee weapons to 2

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -288,7 +288,7 @@ item_db: (
 	Weight: 1400
 	Atk: 250
 	Def: 10
-	Range: 3
+	Range: 2
 	Slots: 1
 	Loc: ["EQP_HAND_L", "EQP_HAND_R"]
 	WeaponLv: 2
@@ -721,8 +721,8 @@ item_db: (
 	Sell: 4000
 	Weight: 1500
 	Def: 5
-	Atk: 170
-	Range: 2
+	Atk: 150
+	Range: 1
 	Slots: 1
 	Loc: "EQP_HAND_R"
 	WeaponLv: 1
@@ -731,8 +731,8 @@ item_db: (
 	ViewSprite: 1
 	Subtype: "W_1HSWORD"
 	Script: <"
-		//bonus bMaxHP, 50;
-		//bonus2 bHPDrainRate, 100, 5;
+		bonus bMaxHP, 50;
+		bonus2 bHPDrainRate, 100, 5;
 		bonus bCriticalDef, 2;
 		bonus bStr, 1;
 		bonus bAspdRate, 1;
@@ -860,7 +860,7 @@ item_db: (
 	Weight: 3000
 	Def: 8
 	Atk: 170
-	Range: 3
+	Range: 2
 	Slots: 1
 	Loc: ["EQP_HAND_L", "EQP_HAND_R"]
 	WeaponLv: 2
