--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -288,7 +288,7 @@ item_db: (
 	Weight: 1400
 	Atk: 250
 	Def: 10
-	Range: 3
+	Range: 2
 	Slots: 1
 	Loc: ["EQP_HAND_L", "EQP_HAND_R"]
 	WeaponLv: 2
@@ -720,16 +720,16 @@ item_db: (
 	Buy: 8000
 	Sell: 4000
 	Weight: 1500
-	Def: 7
-	Atk: 180
-	Range: 2
+	Def: 5
+	Atk: 150
+	Range: 1
 	Slots: 1
-	Loc: ["EQP_HAND_L", "EQP_HAND_R"]
+	Loc: "EQP_HAND_R"
 	WeaponLv: 1
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 1
-	Subtype: "W_2HSWORD"
+	Subtype: "W_1HSWORD"
 	Script: <"
 		bonus bMaxHP, 50;
 		bonus2 bHPDrainRate, 100, 5;
@@ -860,7 +860,7 @@ item_db: (
 	Weight: 3000
 	Def: 8
 	Atk: 170
-	Range: 3
+	Range: 2
 	Slots: 1
 	Loc: ["EQP_HAND_L", "EQP_HAND_R"]
 	WeaponLv: 2
