--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -395,6 +395,9 @@ item_db: (
 	Refine: false
 	ViewSprite: 1
 	Subtype: "W_DAGGER"
+	Script: <"
+		//bonus bBaseWeaponDelayAdjust, -25; // @TMWA
+	">
 },
 {
 	Id: 572
@@ -548,7 +551,7 @@ item_db: (
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 1
-	Subtype: "W_2HAXE"
+	Subtype: "W_1HSWORD"
 	OnEquipScript: <"
 		callfunc "NoBowItem", EQI_HAND_R;
 		if (readparam(bInt) > 1) // @EVOL2
@@ -562,6 +565,7 @@ item_db: (
 		bonus bSpeedAddRate, 10;
 		bonus bHit, -20;
 		bonus bCritical, -25;
+		//bonus bBaseWeaponDelayAdjust, 1600; // @TMWA
 	">
 },
 {
@@ -605,6 +609,7 @@ item_db: (
 	Script: <"
 		bonus bDoubleAddRate, 5;
 		bonus bHit, 3;
+		//bonus bBaseWeaponDelayAdjust, 25; // @TMWA
 	">
 },
 {
@@ -737,6 +742,7 @@ item_db: (
 		bonus bStr, 1;
 		bonus bAspdRate, 1;
 		bonus bHit, 5;
+		//bonus bBaseWeaponDelayAdjust, 25; // @TMWA
 	">
 },
 {
@@ -806,6 +812,7 @@ item_db: (
 		bonus bStr, 5;
 		bonus bAspdRate, 2;
 		bonus bHit, 5;
+		//bonus bBaseWeaponDelayAdjust, -50; // @TMWA
 	">
 },
 {
@@ -890,6 +897,9 @@ item_db: (
 	Refine: false
 	ViewSprite: 1
 	Subtype: "W_2HSTAFF"
+	Script: <"
+		//bonus bBaseWeaponDelayAdjust, -150; // @TMWA
+	">
 },
 {
 	Id: 758
