--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -565,7 +565,7 @@ item_db: (
 		bonus bSpeedAddRate, 10;
 		bonus bHit, -20;
 		bonus bCritical, -25;
-		//bonus bBaseWeaponDelayAdjust, 1150; // @TMWA
+		//bonus bBaseWeaponDelayAdjust, 1600; // @TMWA
 	">
 },
 {
@@ -609,6 +609,7 @@ item_db: (
 	Script: <"
 		bonus bDoubleAddRate, 5;
 		bonus bHit, 3;
+		//bonus bBaseWeaponDelayAdjust, 25; // @TMWA
 	">
 },
 {
@@ -741,6 +742,7 @@ item_db: (
 		bonus bStr, 1;
 		bonus bAspdRate, 1;
 		bonus bHit, 5;
+		//bonus bBaseWeaponDelayAdjust, 25; // @TMWA
 	">
 },
 {
@@ -810,6 +812,7 @@ item_db: (
 		bonus bStr, 5;
 		bonus bAspdRate, 2;
 		bonus bHit, 5;
+		//bonus bBaseWeaponDelayAdjust, -50; // @TMWA
 	">
 },
 {
@@ -894,6 +897,9 @@ item_db: (
 	Refine: false
 	ViewSprite: 1
 	Subtype: "W_2HSTAFF"
+	Script: <"
+		//bonus bBaseWeaponDelayAdjust, -150; // @TMWA
+	">
 },
 {
 	Id: 758
